tests/snapshots/change_operations_test__cw_and_repeat.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
1two 1[t]hree four
