tests/snapshots/change_operations_test__cw_change_word.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
goodby[e]world test
