tests/snapshots/change_operations_test__cw_multiple_words.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 1

Buffer:
firsttwo secon[d]four
