tests/snapshots/change_operations_test__visual_line_change.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
replace[d]line 3
